@@ -1,0 +1,8 @@
+<configure xmlns="http://namespaces.zope.org/zope">
+
+  <utility
+    factory='.tests.test_geocoder.DummyGeoCoder'
+    provides="collective.geo.mapwidget.interfaces.IGeoCoder"
+  />
+
+</configure>
